# CHAMPPy

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  tests.yml
data/example1/: t_logbook.csv  t_vehicle.csv
notebooks/: 01_demo_without_parameterization.ipynb  02_demo_including_parameterization.ipynb
plots/: .gitignore  demo01_charging_profiles_plot.html  demo01_mobility_profiles_plot.html
scripts/: 01_create_parameters_example.py  lint.ps1
src/champpy/: __init__.py
src/champpy/core/: __init__.py  mobility_cleaning.py  mobility_data.py  mobility_model.py  parameterization.py
src/champpy/core/charging/: charging_model.py  charging_validation.py
src/champpy/core/mobility/: mobility_cleaning.py  mobility_components.py  mobility_data.py  mobility_model.py  mobility_validation.py  parameterization.py
src/champpy/data/: params.parquet  params_info.parquet
src/champpy/utils/: data_utils.py  logging.py  plotting.py  time_utils.py
tests/: conftest.py  test_full.py  test_light.py  test_mob_classes.py  test_notebooks.py  test_utilities.py  test_validation.py
