[build-system]
requires = ["hatchling >= 1.6.0"]
build-backend = "hatchling.build"

[project]
name = "champpy"
version = "0.1.0"
description = "CHAMPPy - Mobility and Charging Profiles"
authors = [{name = "Florian Biedenbach", email = "florian.biedenbach@ffe.de"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "numpy>=1.0",
    "pandera[strategies]>=0.15",
    "tqdm>=4.0",
    "scipy>=1.7",
    "pyarrow",
    "plotly>=5.0",
    "pydantic>=2.0",
    "rich>=13.0",
    'tomli>=0.2.0; python_version < "3.11"',
]

keywords = ["mobility", "charging", "profiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/ffe-munich/CHAMPPy"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "pylint>=2.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/champpy"]

[tool.hatchling.build.include]
# Include all files in this folder
"src/champpy/data/**" = "src/champpy/data/**"

[tool.champpy]
# Default output directory for plots
plot_dir = "plots"